MMA-7238 legger til ny tvingSentralPrint felt til DistribuerJournalpost request